Fixed spacing on sections

--- a/src/components/SectionHeader/style.css
+++ b/src/components/SectionHeader/style.css
@@ -7,9 +7,9 @@
 
 .infoBlock {
   border-radius: 5px;
-
+  height: auto;
   flex-basis: 75%;
-  margin: 8%;
+  margin: 12%;
   margin-bottom: 4%;
   background-color: #646c79;
   align-content: center;
